Añado secciones nuevas. Fin de seccionesPRESENTACION.

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 						</div>
 
 						<div class="col-sm-3 position-relative">
-							<img class="is-animated animated fadeInLeftBig" src="img/dos/buzon.png" alt="Buzón Correos">
+							<img class="is-animated animated fadeInUp" src="img/dos/buzon.png" alt="Buzón Correos">
 							<img class="sobre" src="img/dos/sobre.png" alt="">
 						</div>
 						<div class="col-sm-4">
@@ -323,7 +323,7 @@
 
 
 	<!-- SECCION 5 --> 
-	<section class="section fourth fondo3">
+	<section class="section five fondo3">
 		<!-- Compartir botón -->
 		<div class="share-button">
 	        <a href="#">Compartir</a>
@@ -363,24 +363,21 @@
 		</div>
 		<!-- Fin Full Screen Button -->
 	 	<div class="container fullheight">
-	 		<div class="row">
-	 			<div class="col-sm-12">
-	 				<div class="centered contenido">
-	 					<div class="titulodesc">
-	 						<h1 class="text-right">La mascota olímpica</h1>
-							<p class="text-right">El projecte olímpic de Barcelona '92 tingué com a protagonista a Cobi, un gos d'atura català passat pel sedàs del dissenyador Xavier Mariscal. La mascota ocupà un lloc rellevant en tots els elements gràfics de les olimpíades, inclosa la filatèlia.</p>
-	 					</div>
-	 				</div>
-	 			</div>
-	 		</div>
-		   	<div class="row fullheight">
+		   	<div class="row">
+		   		<div class="col-sm-12">
+		   			<div class="titulodesc">
+ 						<h1 class="text-center">La mascota olímpica</h1>
+						<p class="text-center">El projecte olímpic de Barcelona '92 tingué com a protagonista a Cobi, un gos d'atura català passat pel sedàs del dissenyador Xavier Mariscal. La mascota ocupà un lloc rellevant en tots els elements gràfics de les olimpíades, inclosa la filatèlia.</p>
+ 					</div>
+		   		</div>
+
 				<div class="col-sm-12 fullheight">
-					<div class="centered contenido">
+					<div class="contenido">
 						<div class="col-sm-4">
 							<img src="img/tres/cobi_presentacion.png" alt="Cobi Presentación">
 						</div>
 
-						<div class="col-sm-3 position-relative">
+						<div class="col-sm-4">
 							<img src="img/tres/cobi_filatellic0.png" alt="Cobi Filatellic">
 						</div>
 						<div class="col-sm-4">
@@ -401,8 +398,246 @@
 				 </div>
 			</div>
 		</div>
+	</section>
+
+	<!-- SECCION 6 --> 
+	<section class="section six fondo3">
+		<!-- Compartir botón -->
+		<div class="share-button">
+	        <a href="#">Compartir</a>
+	        <div class="icon-wrapper">
+	            <ul>
+	                <li><a target="_blank" href="https://twitter.com/share" data-url="{{ content.absolute_url }}"><i class="fa fa-twitter"></i></a></li>
+	                <li><a target="_blank" href="https://facebook.com/sharer/sharer.php?" data-url="{{ content.absolute_url }}"><i class="fa fa-facebook"></i></a></li>
+	                <li><a target="_blank" href="#" onclick="javascript:window.open('https://www.linkedin.com/shareArticle?mini=true&amp;url={{ content.absolute_url }}&amp;title=','popup','width=600,height=600');"><i class="fa fa-linkedin"></i></a></li>
+	                <li><a target="_blank" href="https://plus.google.com/share?url={{ content.absolute_url }}" onclick="javascript:window.open(this.href,'', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;"><i class="fa fa-google-plus"></i></a></li>
+	                <li><a href="mailto:info@silvertech.com"><i class="fa fa-link"></i></a></li>
+	                <li><a href="#" class="close-social-icons"><i class="fa fa-times"></i></a></li>
+	            </ul>
+	        </div>
+	    </div>
+	    <!-- Fin Compartir botón -->
+		
+		<!-- Full Screen Button -->
+		<div class="icon">
+		<a class="fullscreen" href="#!"><svg class="fs-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
+
+		    <!-- Top Right -->
+		    <path class="tr arrow" d="M74.6 33.6l0-4.3L63.2 40.7c-1.1 1.1-2.8 1.1-3.8 0c-1.1-1.1-1.1-2.8 0-3.9l11.4-11.4h-4.3 c-1.5 0-2.7-1.2-2.7-2.7c0-1.5 1.2-2.7 2.7-2.7h10.9c1.5 0 2.7 1.2 2.7 2.7v10.9c0 1.5-1.2 2.7-2.7 2.7 C75.8 36.3 74.6 35.1 74.6 33.6z"/>
+
+		    <!-- Top Left -->
+		    <path class="tl arrow" d="M33.6 25.4h-4.3l11.4 11.4c1.1 1.1 1.1 2.8 0 3.8c-1.1 1.1-2.8 1.1-3.8 0L25.4 29.3v4.3 c0 1.5-1.2 2.7-2.7 2.7c-1.5 0-2.7-1.2-2.7-2.7V22.7c0-1.5 1.2-2.7 2.7-2.7l10.9 0c1.5 0 2.7 1.2 2.7 2.7 C36.3 24.2 35.1 25.4 33.6 25.4z"/>
+
+		    <!-- Bottom Left -->
+		    <path class="bl arrow" d="M25.4 66.4l0 4.3l11.4-11.4c1.1-1.1 2.8-1.1 3.8 0c1.1 1.1 1.1 2.8 0 3.9L29.3 74.6h4.3 c1.5 0 2.7 1.2 2.7 2.7c0 1.5-1.2 2.7-2.7 2.7H22.7c-1.5 0-2.7-1.2-2.7-2.7V66.4c0-1.5 1.2-2.7 2.7-2.7 C24.2 63.7 25.4 64.9 25.4 66.4z"/>
+
+		    <!-- Bottom Right -->
+		    <path class="br arrow" d="M66.4 74.6h4.3L59.3 63.2c-1.1-1.1-1.1-2.8 0-3.8c1.1-1.1 2.8-1.1 3.8 0l11.4 11.4v-4.3 c0-1.5 1.2-2.7 2.7-2.7c1.5 0 2.7 1.2 2.7 2.7v10.9c0 1.5-1.2 2.7-2.7 2.7l-10.9 0c-1.5 0-2.7-1.2-2.7-2.7 C63.7 75.8 64.9 74.6 66.4 74.6z"/>
+
+		    <!-- Outline -->
+		    <path class="outline" d="M94 5c0.5 0 1 0.5 1 1v88c0 0.5-0.5 1-1 1H6c-0.5 0-1-0.5-1-1V6c0-0.5 0.5-1 1-1H94 M94 0H6C2.7 0 0 2.7 0 6v88 c0 3.3 2.7 6 6 6h88c3.3 0 6-2.7 6-6V6C100 2.7 97.3 0 94 0L94 0z"/>
+		  </svg>
+		</a>
+		</div>
+		<!-- Fin Full Screen Button -->
+
+		<!-- Contenido -->
+	 	<div class="container fullheight">
+		   	<div class="row">
+		   		<div class="col-sm-12">
+		   			<div class="titulodesc">
+ 						<h1 class="text-center">Les Olimpíades Culturals</h1>
+ 					</div>
+		   		</div>
+
+				<div class="col-sm-8 col-sm-offset-2">
+					<div class="contenido">
+						<div class="col-sm-6">
+							<img src="img/tres/olimpiadacultural.png" alt="Cobi Presentación">
+						</div>
+
+						<div class="col-sm-6">
+							<p class="text-left pt80">La candidatura olímpica contemplà canvis en matèria  de transports, urbanisme, comunicacions i infraestructures. A més, però, <strong>també es van assolir millores en matèria  de política cultural.</strong></p>
+						</div>
+					</div>
+				 </div>
+			</div>
+
+			<!-- Boton Scroll Down -->
+			<div class="scroll-down-wrap no-border">
+			  <a href="#" class="section-down-arrow ">
+			    <svg class="nectar-scroll-icon" viewBox="0 0 30 45" enable-background="new 0 0 30 45">
+			      <path class="nectar-scroll-icon-path" fill="none" stroke="#ffffff" stroke-width="2" stroke-miterlimit="10" d="M15,1.118c12.352,0,13.967,12.88,13.967,12.88v18.76  c0,0-1.514,11.204-13.967,11.204S0.931,32.966,0.931,32.966V14.05C0.931,14.05,2.648,1.118,15,1.118z">
+			      </path>
+			    </svg>
+			  </a>
+			</div>
+		</div>
+		<div class="previs-tarjeta">
+			<img src="img/tres/tarjeta.png" alt="Invitación presentación sellos olímpicos">
+		</div>
 	</section>	
+
+	<!-- SECCION 7 --> 
+	<section class="section seven fondo3">
+		<!-- Compartir botón -->
+		<div class="share-button">
+	        <a href="#">Compartir</a>
+	        <div class="icon-wrapper">
+	            <ul>
+	                <li><a target="_blank" href="https://twitter.com/share" data-url="{{ content.absolute_url }}"><i class="fa fa-twitter"></i></a></li>
+	                <li><a target="_blank" href="https://facebook.com/sharer/sharer.php?" data-url="{{ content.absolute_url }}"><i class="fa fa-facebook"></i></a></li>
+	                <li><a target="_blank" href="#" onclick="javascript:window.open('https://www.linkedin.com/shareArticle?mini=true&amp;url={{ content.absolute_url }}&amp;title=','popup','width=600,height=600');"><i class="fa fa-linkedin"></i></a></li>
+	                <li><a target="_blank" href="https://plus.google.com/share?url={{ content.absolute_url }}" onclick="javascript:window.open(this.href,'', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;"><i class="fa fa-google-plus"></i></a></li>
+	                <li><a href="mailto:info@silvertech.com"><i class="fa fa-link"></i></a></li>
+	                <li><a href="#" class="close-social-icons"><i class="fa fa-times"></i></a></li>
+	            </ul>
+	        </div>
+	    </div>
+	    <!-- Fin Compartir botón -->
+		
+		<!-- Full Screen Button -->
+		<div class="icon">
+		<a class="fullscreen" href="#!"><svg class="fs-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
+
+		    <!-- Top Right -->
+		    <path class="tr arrow" d="M74.6 33.6l0-4.3L63.2 40.7c-1.1 1.1-2.8 1.1-3.8 0c-1.1-1.1-1.1-2.8 0-3.9l11.4-11.4h-4.3 c-1.5 0-2.7-1.2-2.7-2.7c0-1.5 1.2-2.7 2.7-2.7h10.9c1.5 0 2.7 1.2 2.7 2.7v10.9c0 1.5-1.2 2.7-2.7 2.7 C75.8 36.3 74.6 35.1 74.6 33.6z"/>
+
+		    <!-- Top Left -->
+		    <path class="tl arrow" d="M33.6 25.4h-4.3l11.4 11.4c1.1 1.1 1.1 2.8 0 3.8c-1.1 1.1-2.8 1.1-3.8 0L25.4 29.3v4.3 c0 1.5-1.2 2.7-2.7 2.7c-1.5 0-2.7-1.2-2.7-2.7V22.7c0-1.5 1.2-2.7 2.7-2.7l10.9 0c1.5 0 2.7 1.2 2.7 2.7 C36.3 24.2 35.1 25.4 33.6 25.4z"/>
+
+		    <!-- Bottom Left -->
+		    <path class="bl arrow" d="M25.4 66.4l0 4.3l11.4-11.4c1.1-1.1 2.8-1.1 3.8 0c1.1 1.1 1.1 2.8 0 3.9L29.3 74.6h4.3 c1.5 0 2.7 1.2 2.7 2.7c0 1.5-1.2 2.7-2.7 2.7H22.7c-1.5 0-2.7-1.2-2.7-2.7V66.4c0-1.5 1.2-2.7 2.7-2.7 C24.2 63.7 25.4 64.9 25.4 66.4z"/>
+
+		    <!-- Bottom Right -->
+		    <path class="br arrow" d="M66.4 74.6h4.3L59.3 63.2c-1.1-1.1-1.1-2.8 0-3.8c1.1-1.1 2.8-1.1 3.8 0l11.4 11.4v-4.3 c0-1.5 1.2-2.7 2.7-2.7c1.5 0 2.7 1.2 2.7 2.7v10.9c0 1.5-1.2 2.7-2.7 2.7l-10.9 0c-1.5 0-2.7-1.2-2.7-2.7 C63.7 75.8 64.9 74.6 66.4 74.6z"/>
+
+		    <!-- Outline -->
+		    <path class="outline" d="M94 5c0.5 0 1 0.5 1 1v88c0 0.5-0.5 1-1 1H6c-0.5 0-1-0.5-1-1V6c0-0.5 0.5-1 1-1H94 M94 0H6C2.7 0 0 2.7 0 6v88 c0 3.3 2.7 6 6 6h88c3.3 0 6-2.7 6-6V6C100 2.7 97.3 0 94 0L94 0z"/>
+		  </svg>
+		</a>
+		</div>
+		<!-- Fin Full Screen Button -->
+
+		<!-- Contenido -->
+	 	<div class="container fullheight">
+		   	<div class="row">
+		   		<div class="col-sm-12">
+		   			<div class="titulodesc">
+ 						<h1 class="text-center">Les Olimpíades Culturals</h1>
+ 					</div>
+		   		</div>
+
+				<div class="col-sm-12">
+					<div class="contenido">
+						<div class="col-sm-6">
+							<p class="text-left"><strong>L'Olimpíada cultural es desenvolupà com a complement a l'activitat olímpica, entre 1989 i 1992</strong>. Durant aquest temps s'estructurà un programa ampli d'espectacles de dansa, teatre, música i exposicions, amb l'objectiu de reforçar la imatge olímpica. La iniciativa culminà amb l'organització del Festival Olímpic de les Arts, amb més de 200 activitats, des de l'abril fins a l'agost de 1992. <strong>Entre elles, s'organitzaren exposicions filatèliques i la presentació de segells de temàtica olímpica.</strong></p>
+						</div>
+						<div class="col-sm-6 pt80">
+							<img class="img-responsive" src="img/tres/tarjeta.png" alt="Cobi Presentación">
+						</div>
+					</div>
+				 </div>
+			</div>
+
+			<!-- Boton Scroll Down -->
+			<div class="scroll-down-wrap no-border">
+			  <a href="#" class="section-down-arrow ">
+			    <svg class="nectar-scroll-icon" viewBox="0 0 30 45" enable-background="new 0 0 30 45">
+			      <path class="nectar-scroll-icon-path" fill="none" stroke="#ffffff" stroke-width="2" stroke-miterlimit="10" d="M15,1.118c12.352,0,13.967,12.88,13.967,12.88v18.76  c0,0-1.514,11.204-13.967,11.204S0.931,32.966,0.931,32.966V14.05C0.931,14.05,2.648,1.118,15,1.118z">
+			      </path>
+			    </svg>
+			  </a>
+			</div>
+		</div>
+		<div class="previs-top">
+			<img src="img/tres/olimpiadacultural.png" alt="Invitación presentación sellos olímpicos">
+		</div>
+	</section>
 	
+	<!-- SECCION 8 --> 
+	<section class="section seven fondo4">
+		<!-- Compartir botón -->
+		<div class="share-button">
+	        <a href="#">Compartir</a>
+	        <div class="icon-wrapper">
+	            <ul>
+	                <li><a target="_blank" href="https://twitter.com/share" data-url="{{ content.absolute_url }}"><i class="fa fa-twitter"></i></a></li>
+	                <li><a target="_blank" href="https://facebook.com/sharer/sharer.php?" data-url="{{ content.absolute_url }}"><i class="fa fa-facebook"></i></a></li>
+	                <li><a target="_blank" href="#" onclick="javascript:window.open('https://www.linkedin.com/shareArticle?mini=true&amp;url={{ content.absolute_url }}&amp;title=','popup','width=600,height=600');"><i class="fa fa-linkedin"></i></a></li>
+	                <li><a target="_blank" href="https://plus.google.com/share?url={{ content.absolute_url }}" onclick="javascript:window.open(this.href,'', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;"><i class="fa fa-google-plus"></i></a></li>
+	                <li><a href="mailto:info@silvertech.com"><i class="fa fa-link"></i></a></li>
+	                <li><a href="#" class="close-social-icons"><i class="fa fa-times"></i></a></li>
+	            </ul>
+	        </div>
+	    </div>
+	    <!-- Fin Compartir botón -->
+		
+		<!-- Full Screen Button -->
+		<div class="icon">
+		<a class="fullscreen" href="#!"><svg class="fs-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
+
+		    <!-- Top Right -->
+		    <path class="tr arrow" d="M74.6 33.6l0-4.3L63.2 40.7c-1.1 1.1-2.8 1.1-3.8 0c-1.1-1.1-1.1-2.8 0-3.9l11.4-11.4h-4.3 c-1.5 0-2.7-1.2-2.7-2.7c0-1.5 1.2-2.7 2.7-2.7h10.9c1.5 0 2.7 1.2 2.7 2.7v10.9c0 1.5-1.2 2.7-2.7 2.7 C75.8 36.3 74.6 35.1 74.6 33.6z"/>
+
+		    <!-- Top Left -->
+		    <path class="tl arrow" d="M33.6 25.4h-4.3l11.4 11.4c1.1 1.1 1.1 2.8 0 3.8c-1.1 1.1-2.8 1.1-3.8 0L25.4 29.3v4.3 c0 1.5-1.2 2.7-2.7 2.7c-1.5 0-2.7-1.2-2.7-2.7V22.7c0-1.5 1.2-2.7 2.7-2.7l10.9 0c1.5 0 2.7 1.2 2.7 2.7 C36.3 24.2 35.1 25.4 33.6 25.4z"/>
+
+		    <!-- Bottom Left -->
+		    <path class="bl arrow" d="M25.4 66.4l0 4.3l11.4-11.4c1.1-1.1 2.8-1.1 3.8 0c1.1 1.1 1.1 2.8 0 3.9L29.3 74.6h4.3 c1.5 0 2.7 1.2 2.7 2.7c0 1.5-1.2 2.7-2.7 2.7H22.7c-1.5 0-2.7-1.2-2.7-2.7V66.4c0-1.5 1.2-2.7 2.7-2.7 C24.2 63.7 25.4 64.9 25.4 66.4z"/>
+
+		    <!-- Bottom Right -->
+		    <path class="br arrow" d="M66.4 74.6h4.3L59.3 63.2c-1.1-1.1-1.1-2.8 0-3.8c1.1-1.1 2.8-1.1 3.8 0l11.4 11.4v-4.3 c0-1.5 1.2-2.7 2.7-2.7c1.5 0 2.7 1.2 2.7 2.7v10.9c0 1.5-1.2 2.7-2.7 2.7l-10.9 0c-1.5 0-2.7-1.2-2.7-2.7 C63.7 75.8 64.9 74.6 66.4 74.6z"/>
+
+		    <!-- Outline -->
+		    <path class="outline" d="M94 5c0.5 0 1 0.5 1 1v88c0 0.5-0.5 1-1 1H6c-0.5 0-1-0.5-1-1V6c0-0.5 0.5-1 1-1H94 M94 0H6C2.7 0 0 2.7 0 6v88 c0 3.3 2.7 6 6 6h88c3.3 0 6-2.7 6-6V6C100 2.7 97.3 0 94 0L94 0z"/>
+		  </svg>
+		</a>
+		</div>
+		<!-- Fin Full Screen Button -->
+
+		<!-- Contenido -->
+	 	<div class="container fullheight">
+		   	<div class="row">
+		   		<div class="col-sm-12">
+		   			<div class="titulodesc">
+ 						<h1 class="text-center">Olymphilex ‘92</h1>
+ 						<p class="text-center">En el marc de les activitats programades en l'Olimpíada Cultural es presentà la <strong>cinquena edició de l'Exposició Mundial de Filatèlia Olímpica i Esportiva</strong>, a la Facultat de Ciències Econòmiques de la Universitat de Barcelona. Un gran nombre d'expositors, col·leccionistes  i comerciants de l'àmbit filatèlic van exhibir segells i material postal de temàtica olímpica.</p>
+ 					</div>
+		   		</div>
+
+				<div class="col-sm-12">
+					<div class="contenido pt20">
+						<div class="col-sm-6">
+							<img class="img-responsive right" src="img/cuatro/olymphilex_stamp.png" alt="Olymphilex Stamp">
+						</div>
+						<div class="col-sm-6">
+							<img class="img-responsive" src="img/cuatro/cobi_filatelic.png" alt="Cobi Filatelic">
+						</div>
+					</div>
+				 </div>
+
+				 <div class="col-sm-12 pt20">
+					<div class="contenido">
+						<p class="text-center">Dins del programa d'actes, <strong>la comissió presentà dos segells amb una tirada  de 2,500,000 d'exemplars cadascun</strong> i una medalla commemorativa, gràcies a la col·laboració de Correus i la Fábrica Nacional de Moneda y Timbre (FNMT).</p>
+					</div>
+				 </div>
+			</div>
+
+			<!-- Boton Scroll Down -->
+			<div class="scroll-down-wrap no-border">
+			  <a href="#" class="section-down-arrow ">
+			    <svg class="nectar-scroll-icon" viewBox="0 0 30 45" enable-background="new 0 0 30 45">
+			      <path class="nectar-scroll-icon-path" fill="none" stroke="#ffffff" stroke-width="2" stroke-miterlimit="10" d="M15,1.118c12.352,0,13.967,12.88,13.967,12.88v18.76  c0,0-1.514,11.204-13.967,11.204S0.931,32.966,0.931,32.966V14.05C0.931,14.05,2.648,1.118,15,1.118z">
+			      </path>
+			    </svg>
+			  </a>
+			</div>
+		</div>
+		<div class="previs-top">
+			<img src="img/tres/olimpiadacultural.png" alt="Invitación presentación sellos olímpicos">
+		</div>
+	</section>
 
 </div>
 
