--- a/index.html
+++ b/index.html
@@ -1114,10 +1114,10 @@
 
 		<!-- Contenido -->
 	 	<div class="container">
-		   	<div class="row">
-				<div class="col-sm-12">
+		   	<div class="row flex-parent">
+				<div class="col-sm-12 flex-child">
 					<div>
-						<h1 class="text-center pt40 pb10">Emissió preolímpica #5</h1> 
+						<h1 class="text-center pb10">Emissió preolímpica #5</h1> 
 						<p class="text-center pt20">Dissenyador: <strong>Eduard Arranz-Bravo.</strong><br>.(Barcelona, 1941). Esports representats: Halterofília, Hoquei sobre herba i Judo.</p>
 					</div>
 			</div>
@@ -1132,20 +1132,248 @@
 			  </a>
 			</div>
 			<div>
-				<img class="previs-top-center max-img imgmw320 rotam3" src="img/cinco/4/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
+				<img class="previs-top-center max-img imgmw320 rotam3" src="img/cinco/5/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
 			</div>
 
 			<div>
-				<img class="previs-bottom-left2 max-img imgmw320 rota3" src="img/cinco/4/sello2.png" alt="Sello Olímpico Robert Llimós i Oriol 2'">
+				<img class="previs-bottom-left max-img imgmw320 rotam3" src="img/cinco/5/sello2.png" alt="Sello Olímpico Robert Llimós i Oriol 2'">
 			</div>
 
 			<div>
-				<img class="previs-bottom-right2 max-img imgmw320 rotam3" src="img/cinco/4/sello3.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
+				<img class="previs-bottom-right2 max-img imgmw320 rota3" src="img/cinco/5/sello3.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
 			</div>
 
 
 		</div>
 	</section>		
+
+	<!-- SECCION 16 --> 
+	<section class="section sixteen fondo5">
+		<!-- Compartir botón -->
+		<div class="share-button">
+	        <a href="#">Compartir</a>
+	        <div class="icon-wrapper">
+	            <ul>
+	                <li><a target="_blank" href="https://twitter.com/share" data-url="{{ content.absolute_url }}"><i class="fa fa-twitter"></i></a></li>
+	                <li><a target="_blank" href="https://facebook.com/sharer/sharer.php?" data-url="{{ content.absolute_url }}"><i class="fa fa-facebook"></i></a></li>
+	                <li><a target="_blank" href="#" onclick="javascript:window.open('https://www.linkedin.com/shareArticle?mini=true&amp;url={{ content.absolute_url }}&amp;title=','popup','width=600,height=600');"><i class="fa fa-linkedin"></i></a></li>
+	                <li><a target="_blank" href="https://plus.google.com/share?url={{ content.absolute_url }}" onclick="javascript:window.open(this.href,'', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;"><i class="fa fa-google-plus"></i></a></li>
+	                <li><a href="mailto:info@silvertech.com"><i class="fa fa-link"></i></a></li>
+	                <li><a href="#" class="close-social-icons"><i class="fa fa-times"></i></a></li>
+	            </ul>
+	        </div>
+	    </div>
+	    <!-- Fin Compartir botón -->
+		
+		<!-- Full Screen Button -->
+		<div class="icon">
+		<a class="fullscreen" href="#!"><svg class="fs-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
+
+		    <!-- Top Right -->
+		    <path class="tr arrow" d="M74.6 33.6l0-4.3L63.2 40.7c-1.1 1.1-2.8 1.1-3.8 0c-1.1-1.1-1.1-2.8 0-3.9l11.4-11.4h-4.3 c-1.5 0-2.7-1.2-2.7-2.7c0-1.5 1.2-2.7 2.7-2.7h10.9c1.5 0 2.7 1.2 2.7 2.7v10.9c0 1.5-1.2 2.7-2.7 2.7 C75.8 36.3 74.6 35.1 74.6 33.6z"/>
+
+		    <!-- Top Left -->
+		    <path class="tl arrow" d="M33.6 25.4h-4.3l11.4 11.4c1.1 1.1 1.1 2.8 0 3.8c-1.1 1.1-2.8 1.1-3.8 0L25.4 29.3v4.3 c0 1.5-1.2 2.7-2.7 2.7c-1.5 0-2.7-1.2-2.7-2.7V22.7c0-1.5 1.2-2.7 2.7-2.7l10.9 0c1.5 0 2.7 1.2 2.7 2.7 C36.3 24.2 35.1 25.4 33.6 25.4z"/>
+
+		    <!-- Bottom Left -->
+		    <path class="bl arrow" d="M25.4 66.4l0 4.3l11.4-11.4c1.1-1.1 2.8-1.1 3.8 0c1.1 1.1 1.1 2.8 0 3.9L29.3 74.6h4.3 c1.5 0 2.7 1.2 2.7 2.7c0 1.5-1.2 2.7-2.7 2.7H22.7c-1.5 0-2.7-1.2-2.7-2.7V66.4c0-1.5 1.2-2.7 2.7-2.7 C24.2 63.7 25.4 64.9 25.4 66.4z"/>
+
+		    <!-- Bottom Right -->
+		    <path class="br arrow" d="M66.4 74.6h4.3L59.3 63.2c-1.1-1.1-1.1-2.8 0-3.8c1.1-1.1 2.8-1.1 3.8 0l11.4 11.4v-4.3 c0-1.5 1.2-2.7 2.7-2.7c1.5 0 2.7 1.2 2.7 2.7v10.9c0 1.5-1.2 2.7-2.7 2.7l-10.9 0c-1.5 0-2.7-1.2-2.7-2.7 C63.7 75.8 64.9 74.6 66.4 74.6z"/>
+
+		    <!-- Outline -->
+		    <path class="outline" d="M94 5c0.5 0 1 0.5 1 1v88c0 0.5-0.5 1-1 1H6c-0.5 0-1-0.5-1-1V6c0-0.5 0.5-1 1-1H94 M94 0H6C2.7 0 0 2.7 0 6v88 c0 3.3 2.7 6 6 6h88c3.3 0 6-2.7 6-6V6C100 2.7 97.3 0 94 0L94 0z"/>
+		  </svg>
+		</a>
+		</div>
+		<!-- Fin Full Screen Button -->
+
+		<!-- Contenido -->
+	 	<div class="container">
+		   	<div class="row flex-parent">
+				<div class="col-sm-6 flex-child">
+					<div>
+						<h1 class="text-left pb10">Emissió preolímpica #6</h1> 
+						<p class="text-left pt20">Dissenyador: <strong>Perico Pastor.</strong><br>(La Seu d'Urgell, 1953). Esports representats: Pentatló, Piragüisme i Rem.</p>
+					</div>
+			</div>
+
+			<!-- Boton Scroll Down -->
+			<div class="scroll-down-wrap no-border">
+			  <a href="#" class="section-down-arrow ">
+			    <svg class="nectar-scroll-icon" viewBox="0 0 30 45" enable-background="new 0 0 30 45">
+			      <path class="nectar-scroll-icon-path" fill="none" stroke="#ffffff" stroke-width="2" stroke-miterlimit="10" d="M15,1.118c12.352,0,13.967,12.88,13.967,12.88v18.76  c0,0-1.514,11.204-13.967,11.204S0.931,32.966,0.931,32.966V14.05C0.931,14.05,2.648,1.118,15,1.118z">
+			      </path>
+			    </svg>
+			  </a>
+			</div>
+			<div>
+				<img class="absolute-center-right3 max-img imgmw320 rota3" src="img/cinco/6/sello3.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
+			</div>
+			
+			<div>
+				<img class="absolute-center-right2 max-img imgmw320 rota3" src="img/cinco/6/sello2.png" alt="Sello Olímpico Robert Llimós i Oriol 2'">
+			</div>
+
+			<div>
+				<img class="absolute-center-right1 max-img imgmw320 rotam3" src="img/cinco/6/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
+			</div>
+
+
+		</div>
+	</section>
+
+	<!-- SECCION 17 --> 
+	<section class="section seventeen fondo5">
+		<!-- Compartir botón -->
+		<div class="share-button">
+	        <a href="#">Compartir</a>
+	        <div class="icon-wrapper">
+	            <ul>
+	                <li><a target="_blank" href="https://twitter.com/share" data-url="{{ content.absolute_url }}"><i class="fa fa-twitter"></i></a></li>
+	                <li><a target="_blank" href="https://facebook.com/sharer/sharer.php?" data-url="{{ content.absolute_url }}"><i class="fa fa-facebook"></i></a></li>
+	                <li><a target="_blank" href="#" onclick="javascript:window.open('https://www.linkedin.com/shareArticle?mini=true&amp;url={{ content.absolute_url }}&amp;title=','popup','width=600,height=600');"><i class="fa fa-linkedin"></i></a></li>
+	                <li><a target="_blank" href="https://plus.google.com/share?url={{ content.absolute_url }}" onclick="javascript:window.open(this.href,'', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;"><i class="fa fa-google-plus"></i></a></li>
+	                <li><a href="mailto:info@silvertech.com"><i class="fa fa-link"></i></a></li>
+	                <li><a href="#" class="close-social-icons"><i class="fa fa-times"></i></a></li>
+	            </ul>
+	        </div>
+	    </div>
+	    <!-- Fin Compartir botón -->
+		
+		<!-- Full Screen Button -->
+		<div class="icon">
+		<a class="fullscreen" href="#!"><svg class="fs-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
+
+		    <!-- Top Right -->
+		    <path class="tr arrow" d="M74.6 33.6l0-4.3L63.2 40.7c-1.1 1.1-2.8 1.1-3.8 0c-1.1-1.1-1.1-2.8 0-3.9l11.4-11.4h-4.3 c-1.5 0-2.7-1.2-2.7-2.7c0-1.5 1.2-2.7 2.7-2.7h10.9c1.5 0 2.7 1.2 2.7 2.7v10.9c0 1.5-1.2 2.7-2.7 2.7 C75.8 36.3 74.6 35.1 74.6 33.6z"/>
+
+		    <!-- Top Left -->
+		    <path class="tl arrow" d="M33.6 25.4h-4.3l11.4 11.4c1.1 1.1 1.1 2.8 0 3.8c-1.1 1.1-2.8 1.1-3.8 0L25.4 29.3v4.3 c0 1.5-1.2 2.7-2.7 2.7c-1.5 0-2.7-1.2-2.7-2.7V22.7c0-1.5 1.2-2.7 2.7-2.7l10.9 0c1.5 0 2.7 1.2 2.7 2.7 C36.3 24.2 35.1 25.4 33.6 25.4z"/>
+
+		    <!-- Bottom Left -->
+		    <path class="bl arrow" d="M25.4 66.4l0 4.3l11.4-11.4c1.1-1.1 2.8-1.1 3.8 0c1.1 1.1 1.1 2.8 0 3.9L29.3 74.6h4.3 c1.5 0 2.7 1.2 2.7 2.7c0 1.5-1.2 2.7-2.7 2.7H22.7c-1.5 0-2.7-1.2-2.7-2.7V66.4c0-1.5 1.2-2.7 2.7-2.7 C24.2 63.7 25.4 64.9 25.4 66.4z"/>
+
+		    <!-- Bottom Right -->
+		    <path class="br arrow" d="M66.4 74.6h4.3L59.3 63.2c-1.1-1.1-1.1-2.8 0-3.8c1.1-1.1 2.8-1.1 3.8 0l11.4 11.4v-4.3 c0-1.5 1.2-2.7 2.7-2.7c1.5 0 2.7 1.2 2.7 2.7v10.9c0 1.5-1.2 2.7-2.7 2.7l-10.9 0c-1.5 0-2.7-1.2-2.7-2.7 C63.7 75.8 64.9 74.6 66.4 74.6z"/>
+
+		    <!-- Outline -->
+		    <path class="outline" d="M94 5c0.5 0 1 0.5 1 1v88c0 0.5-0.5 1-1 1H6c-0.5 0-1-0.5-1-1V6c0-0.5 0.5-1 1-1H94 M94 0H6C2.7 0 0 2.7 0 6v88 c0 3.3 2.7 6 6 6h88c3.3 0 6-2.7 6-6V6C100 2.7 97.3 0 94 0L94 0z"/>
+		  </svg>
+		</a>
+		</div>
+		<!-- Fin Full Screen Button -->
+
+		<!-- Contenido -->
+	 	<div class="container">
+		   	<div class="row">
+				<div class="col-sm-12">
+					<div>
+						<h1 class="text-center pt40 pb10">Emissió preolímpica #7</h1> 
+						<p class="text-center pt20">Dissenyador: <strong>Joan-Pere Viladecans.</strong><br>.(Barcelona, 1948). Esports representats: Tennis, Tennis de taula i Tir olímpic.</p>
+					</div>
+			</div>
+
+			<!-- Boton Scroll Down -->
+			<div class="scroll-down-wrap no-border">
+			  <a href="#" class="section-down-arrow ">
+			    <svg class="nectar-scroll-icon" viewBox="0 0 30 45" enable-background="new 0 0 30 45">
+			      <path class="nectar-scroll-icon-path" fill="none" stroke="#ffffff" stroke-width="2" stroke-miterlimit="10" d="M15,1.118c12.352,0,13.967,12.88,13.967,12.88v18.76  c0,0-1.514,11.204-13.967,11.204S0.931,32.966,0.931,32.966V14.05C0.931,14.05,2.648,1.118,15,1.118z">
+			      </path>
+			    </svg>
+			  </a>
+			</div>
+			<div>
+				<img class="previs-top4 max-img imgmw320" src="img/cinco/7/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
+			</div>
+
+			<div>
+				<img class="absolute-center-right4 max-img imgmw320" src="img/cinco/7/sello2.png" alt="Sello Olímpico Robert Llimós i Oriol 2'">
+			</div>
+
+			<div>
+				<img class="previs-bottom-right3 max-img imgmw320" src="img/cinco/7/sello3.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
+			</div>
+
+
+		</div>
+	</section>		
+
+	<!-- SECCION 18 --> 
+	<section class="section eighteen fondo5">
+		<!-- Compartir botón -->
+		<div class="share-button">
+	        <a href="#">Compartir</a>
+	        <div class="icon-wrapper">
+	            <ul>
+	                <li><a target="_blank" href="https://twitter.com/share" data-url="{{ content.absolute_url }}"><i class="fa fa-twitter"></i></a></li>
+	                <li><a target="_blank" href="https://facebook.com/sharer/sharer.php?" data-url="{{ content.absolute_url }}"><i class="fa fa-facebook"></i></a></li>
+	                <li><a target="_blank" href="#" onclick="javascript:window.open('https://www.linkedin.com/shareArticle?mini=true&amp;url={{ content.absolute_url }}&amp;title=','popup','width=600,height=600');"><i class="fa fa-linkedin"></i></a></li>
+	                <li><a target="_blank" href="https://plus.google.com/share?url={{ content.absolute_url }}" onclick="javascript:window.open(this.href,'', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;"><i class="fa fa-google-plus"></i></a></li>
+	                <li><a href="mailto:info@silvertech.com"><i class="fa fa-link"></i></a></li>
+	                <li><a href="#" class="close-social-icons"><i class="fa fa-times"></i></a></li>
+	            </ul>
+	        </div>
+	    </div>
+	    <!-- Fin Compartir botón -->
+		
+		<!-- Full Screen Button -->
+		<div class="icon">
+		<a class="fullscreen" href="#!"><svg class="fs-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
+
+		    <!-- Top Right -->
+		    <path class="tr arrow" d="M74.6 33.6l0-4.3L63.2 40.7c-1.1 1.1-2.8 1.1-3.8 0c-1.1-1.1-1.1-2.8 0-3.9l11.4-11.4h-4.3 c-1.5 0-2.7-1.2-2.7-2.7c0-1.5 1.2-2.7 2.7-2.7h10.9c1.5 0 2.7 1.2 2.7 2.7v10.9c0 1.5-1.2 2.7-2.7 2.7 C75.8 36.3 74.6 35.1 74.6 33.6z"/>
+
+		    <!-- Top Left -->
+		    <path class="tl arrow" d="M33.6 25.4h-4.3l11.4 11.4c1.1 1.1 1.1 2.8 0 3.8c-1.1 1.1-2.8 1.1-3.8 0L25.4 29.3v4.3 c0 1.5-1.2 2.7-2.7 2.7c-1.5 0-2.7-1.2-2.7-2.7V22.7c0-1.5 1.2-2.7 2.7-2.7l10.9 0c1.5 0 2.7 1.2 2.7 2.7 C36.3 24.2 35.1 25.4 33.6 25.4z"/>
+
+		    <!-- Bottom Left -->
+		    <path class="bl arrow" d="M25.4 66.4l0 4.3l11.4-11.4c1.1-1.1 2.8-1.1 3.8 0c1.1 1.1 1.1 2.8 0 3.9L29.3 74.6h4.3 c1.5 0 2.7 1.2 2.7 2.7c0 1.5-1.2 2.7-2.7 2.7H22.7c-1.5 0-2.7-1.2-2.7-2.7V66.4c0-1.5 1.2-2.7 2.7-2.7 C24.2 63.7 25.4 64.9 25.4 66.4z"/>
+
+		    <!-- Bottom Right -->
+		    <path class="br arrow" d="M66.4 74.6h4.3L59.3 63.2c-1.1-1.1-1.1-2.8 0-3.8c1.1-1.1 2.8-1.1 3.8 0l11.4 11.4v-4.3 c0-1.5 1.2-2.7 2.7-2.7c1.5 0 2.7 1.2 2.7 2.7v10.9c0 1.5-1.2 2.7-2.7 2.7l-10.9 0c-1.5 0-2.7-1.2-2.7-2.7 C63.7 75.8 64.9 74.6 66.4 74.6z"/>
+
+		    <!-- Outline -->
+		    <path class="outline" d="M94 5c0.5 0 1 0.5 1 1v88c0 0.5-0.5 1-1 1H6c-0.5 0-1-0.5-1-1V6c0-0.5 0.5-1 1-1H94 M94 0H6C2.7 0 0 2.7 0 6v88 c0 3.3 2.7 6 6 6h88c3.3 0 6-2.7 6-6V6C100 2.7 97.3 0 94 0L94 0z"/>
+		  </svg>
+		</a>
+		</div>
+		<!-- Fin Full Screen Button -->
+
+		<!-- Contenido -->
+	 	<div class="container">
+		   	<div class="row">
+				<div class="col-sm-12">
+					<div>
+						<h1 class="text-center pt40 pb10">Emissió preolímpica #7</h1> 
+						<p class="text-center pt20">Dissenyador: <strong>Joan-Pere Viladecans.</strong><br>.(Barcelona, 1948). Esports representats: Tennis, Tennis de taula i Tir olímpic.</p>
+					</div>
+			</div>
+
+			<!-- Boton Scroll Down -->
+			<div class="scroll-down-wrap no-border">
+			  <a href="#" class="section-down-arrow ">
+			    <svg class="nectar-scroll-icon" viewBox="0 0 30 45" enable-background="new 0 0 30 45">
+			      <path class="nectar-scroll-icon-path" fill="none" stroke="#ffffff" stroke-width="2" stroke-miterlimit="10" d="M15,1.118c12.352,0,13.967,12.88,13.967,12.88v18.76  c0,0-1.514,11.204-13.967,11.204S0.931,32.966,0.931,32.966V14.05C0.931,14.05,2.648,1.118,15,1.118z">
+			      </path>
+			    </svg>
+			  </a>
+			</div>
+			<div>
+				<img class="previs-top4 max-img imgmw320" src="img/cinco/7/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
+			</div>
+
+			<div>
+				<img class="absolute-center-right4 max-img imgmw320" src="img/cinco/7/sello2.png" alt="Sello Olímpico Robert Llimós i Oriol 2'">
+			</div>
+
+			<div>
+				<img class="previs-bottom-right3 max-img imgmw320" src="img/cinco/7/sello3.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
+			</div>
+
+
+		</div>
+	</section>	
 
 </div>
 
