feat(index_final): cobi animation by jQuery switchClass

--- a/index_final.html
+++ b/index_final.html
@@ -74,7 +74,7 @@
 						<p class="text-center"><strong>Els Jocs Olímpics de Barcelona van celebrar-se entre el 25 de juliol i el 9 d'agost de 1992</strong>.  La designació com a ciutat organitzadora comportà una profunda transformació urbanística, social i la creació de nous equipaments. Aquest esforç es complementà amb una acurada imatge corporativa, sota la voluntat de presentar una ciutat moderna i actual.  I en aquest sentit, la <strong>filatèlia olímpica va tenir un gran paper</strong>. </p>
 					</div>
 
-					<div class="cobi is-animated animated fadeInLeftBig">
+					<div class="cobi no-animate">
 						<img src="img/uno/cobi.png" alt="Cobi">
 					</div>
 
@@ -472,8 +472,8 @@
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.7.6/jquery.fullPage.min.js"></script>
+<script src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script src="js/query.scrollsteps-full-min.js"></script>
 <script src="js/scrollControll.js"></script>
-<script src="js/main.js"></script>
 </body>
 </html>
