feat(index_final): circles + cobi animation

--- a/index_final.html
+++ b/index_final.html
@@ -66,8 +66,14 @@
 			   <div class="row fullheight">
 				<div class="col-sm-12 fullheight">
 
-					<div class="aros centered is-animated animated fadeIn">
-						<img src="img/uno/arosolimpicos.png" alt="Aros Olímpicos">
+					<div class="aros centered">
+						<img src="img/uno/arosolimpicos.png" class="rings_all" alt="Aros Olímpicos">
+
+						<img src="img/uno/aros-circle_blue.png" class="rings ring_blue no-animate" alt="" />
+						<img src="img/uno/aros-circle_negro.png" class="rings ring_black no-animate" alt="" />
+						<img src="img/uno/aros-circle_red.png" class="rings ring_red no-animate" alt="" />
+						<img src="img/uno/aros-circle_yellow.png" class="rings ring_yellow no-animate" alt="" />
+						<img src="img/uno/aros-circle_green.png" class="rings ring_green no-animate" alt="" />
 					</div>
 					<div class="centered contenido">
 						<h1 class="text-center">Ressorgiment</h1>
