fix(index_final): refactor animations and CSS selectors inherence as section

--- a/index_final.html
+++ b/index_final.html
@@ -60,7 +60,7 @@
 
 	<!-- SECCION 1 --> 
 	<section class="section first fondo1">
-		<div class="diapo">
+		<div class="diapo diapo_1 no-animate">
 			<!-- Contenido seccion -->
 			<div class="container fullheight">
 			   <div class="row fullheight">
@@ -89,7 +89,7 @@
 			</div>
 		</div>
 
-		<div class="diapo">
+		<div class="diapo diapo_2 no-animate">
 			<div class="container fullheight">
 				<div class="row fullheight">
 					<div class="col-sm-12 fullheight">
