Maquetación móvil sin menu al 70%

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>Sellos Olimpiadas Barcelona 92'</title>
 
 	<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
@@ -59,16 +60,16 @@
 		<!-- Fin Full Screen Button -->
 
 		<!-- Contenido seccion -->	
-		<div class="container fullheight">
-		   <div class="row fullheight">
-			<div class="col-sm-12 fullheight">
-
-				<div class="aros centered is-animated animated fadeIn">
-					<img src="img/uno/arosolimpicos.png" alt="Aros Olímpicos">
-				</div>
-				<div class="centered contenido">
+		<div class="container flex-parent">
+		   <div class="row">
+			<div class="col-sm-12 flex-child">
+				<div class="contenido">
 					<h1 class="text-center">Ressorgiment</h1>
 					<p class="text-center"><strong>Els Jocs Olímpics de Barcelona van celebrar-se entre el 25 de juliol i el 9 d'agost de 1992</strong>.  La designació com a ciutat organitzadora comportà una profunda transformació urbanística, social i la creació de nous equipaments. Aquest esforç es complementà amb una acurada imatge corporativa, sota la voluntat de presentar una ciutat moderna i actual.  I en aquest sentit, la <strong>filatèlia olímpica va tenir un gran paper</strong>. </p>
+				</div>
+
+				<div class="aros">
+					<img class="max-img" src="img/uno/arosolimpicos.png" alt="Aros Olímpicos">
 				</div>
 
 				<div class="cobi is-animated animated fadeInLeftBig">
