--- a/index_final.html
+++ b/index_final.html
@@ -105,10 +105,10 @@
 							<div class="row">
 								<div class="col-sm-12">
 									<div class="col-sm-6 p60 text-right">
-										<p class="is-animated animated fadeInLeftBig">Molt abans del 1992, Barcelona va ser nomenada seu de l'Olimpíada Popular, concretament entre el 19  i el 26 de juliol del 1936.</p>
-										<span class="minidesc is-animated animated fadeIn">Vinyeta de 10 cèntims emesa  per recaptar diners per a la celebració de l'Olimpíada Popular, 1936. </span>
+										<p class="text no-animate">Molt abans del 1992, Barcelona va ser nomenada seu de l'Olimpíada Popular, concretament entre el 19  i el 26 de juliol del 1936.</p>
+										<span class="minidesc claim no-animate">Vinyeta de 10 cèntims emesa  per recaptar diners per a la celebració de l'Olimpíada Popular, 1936. </span>
 									</div>
-									<div class="col-sm-6 p60 is-animated animated fadeInLeftBig">
+									<div class="col-sm-6 p60 image no-animate">
 										<img class="rota5" src="img/uno/olimpiada_popular.png" alt="Olimpiada Popular">
 									</div>
 								</div>
@@ -480,6 +480,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="js/query.scrollsteps-full-min.js"></script>
+<script src="js/jquery.easing.1.3.js"></script>
 <script src="js/scrollControll.js"></script>
 </body>
 </html>
