feat(index_final): refactor scroll steps as search pending animations

--- a/index_final.html
+++ b/index_final.html
@@ -66,7 +66,7 @@
 			   <div class="row fullheight">
 				<div class="col-sm-12 fullheight">
 
-					<div class="aros centered step">
+					<div class="aros centered no-animate step step_orderToAnimate-1">
 						<img src="img/uno/arosolimpicos.png" class="rings_all" alt="Aros Olímpicos">
 
 						<img src="img/uno/aros-circle_blue.png" class="rings ring_blue no-animate" alt="" />
@@ -80,7 +80,7 @@
 						<p class="text-center"><strong>Els Jocs Olímpics de Barcelona van celebrar-se entre el 25 de juliol i el 9 d'agost de 1992</strong>.  La designació com a ciutat organitzadora comportà una profunda transformació urbanística, social i la creació de nous equipaments. Aquest esforç es complementà amb una acurada imatge corporativa, sota la voluntat de presentar una ciutat moderna i actual.  I en aquest sentit, la <strong>filatèlia olímpica va tenir un gran paper</strong>. </p>
 					</div>
 
-					<div class="cobi no-animate step">
+					<div class="cobi no-animate step step_orderToAnimate-2">
 						<img src="img/uno/cobi.png" alt="Cobi">
 					</div>
 
@@ -89,7 +89,7 @@
 			</div>
 		</div>
 
-		<div class="diapo diapo_2 no-animate step">
+		<div class="diapo diapo_2 no-animate step step_orderToAnimate-3">
 			<div class="container fullheight">
 				<div class="row fullheight">
 					<div class="col-sm-12 fullheight">
@@ -105,10 +105,10 @@
 							<div class="row">
 								<div class="col-sm-12">
 									<div class="col-sm-6 p60 text-right">
-										<p class="text no-animate step">Molt abans del 1992, Barcelona va ser nomenada seu de l'Olimpíada Popular, concretament entre el 19  i el 26 de juliol del 1936.</p>
-										<span class="minidesc claim no-animate step">Vinyeta de 10 cèntims emesa  per recaptar diners per a la celebració de l'Olimpíada Popular, 1936. </span>
+										<p class="text no-animate step step_orderToAnimate-4">Molt abans del 1992, Barcelona va ser nomenada seu de l'Olimpíada Popular, concretament entre el 19  i el 26 de juliol del 1936.</p>
+										<span class="minidesc claim no-animate step step_orderToAnimate-6">Vinyeta de 10 cèntims emesa  per recaptar diners per a la celebració de l'Olimpíada Popular, 1936. </span>
 									</div>
-									<div class="col-sm-6 p60 image no-animate step">
+									<div class="col-sm-6 p60 image no-animate step step_orderToAnimate-5">
 										<img class="rota5" src="img/uno/olimpiada_popular.png" alt="Olimpiada Popular">
 									</div>
 								</div>
