feat(index_final): section 2 - diapo 1

--- a/index_final.html
+++ b/index_final.html
@@ -122,59 +122,67 @@
 	</section>
 
 	<!-- SECCION 3--> 
-	<section class="section third fondo2">
-	 	<div class="container fullheight">
-		   	<div class="row fullheight">
-				<div class="col-sm-12 fullheight">
-					<div class="centered contenido">
-						<div class="titulodesc">
-							<h1 class="text-center">Barcelona '92</h1>
-							<p class="text-center">Barcelona va ser escollida seu de la XXV edició dels Jocs d'Estiu durant la 91a sessió del Comitè Olímpic Internacional, celebrada el 17 d'octubre de 1986 a Lausana, Suïssa. <strong>La nominació va despertar l'eufòria per tota Catalunya.</strong> </p>
-							<p class="text-center">S'iniciava una carrera contra-rellotge per acollir el que serien <strong>"els millors Jocs Olímpics de la història", segons declaracions de Joan Antoni Samaranch.</strong></p>
-						</div>
-					</div>
+	<section class="section second fondo2">
+		<div class="diapo diapo_1">
 
-				 </div>
-			</div>
-			<div class="img-esquina-r-t">
-				<img src="img/dos/plaza-catalunya1.png" alt="">
-			</div>
-			<div class="img-esquina-l-b">
-				<img src="img/dos/estadio-olimpico1.png" alt="">
-			</div>
-		</div>
-	</section>	
-
-
-	<!-- SECCION 4--> 
-	<section class="section fourth fondo2">
-	 	<div class="container fullheight">
-		   	<div class="row fullheight">
-				<div class="col-sm-12 fullheight">
-					<div class="centered contenido">
-						<div class="col-sm-4">
-							<div class="titulodesc">
-								<h1 class="text-right">El desplegament dels serveis postals</h1>
-								<p class="text-right">L'enviament de telegrames, postals exprés, cartes, tèlex  o faxos augmentaren considerablement al llarg dels Jocs Olímpics, fet que obligà a reforçar els serveis postals habituals.</p>
+			<div class="container fullheight">
+				<div class="row fullheight">
+					<div class="col-sm-12 fullheight">
+						<div class="centered contenido">
+							<div class="titulodesc no-animate step step_orderToAnimate-1">
+								<h1 class="text-center">Barcelona '92</h1>
+								<p class="text-center">Barcelona va ser escollida seu de la XXV edició dels Jocs d'Estiu durant la 91a sessió del Comitè Olímpic Internacional, celebrada el 17 d'octubre de 1986 a Lausana, Suïssa. <strong>La nominació va despertar l'eufòria per tota Catalunya.</strong> </p>
+								<p class="text-center">S'iniciava una carrera contra-rellotge per acollir el que serien <strong>"els millors Jocs Olímpics de la història", segons declaracions de Joan Antoni Samaranch.</strong></p>
 							</div>
 						</div>
 
-						<div class="col-sm-3 position-relative">
-							<img class="is-animated animated fadeInUp" src="img/dos/buzon.png" alt="Buzón Correos">
+					 </div>
+				</div>
+				<div class="img-esquina-r-t no-animate">
+					<img src="img/dos/plaza-catalunya1.png" alt="">
+					<div class="minidesc no-animate step step_orderToAnimate-2">
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sollicitudin dolor at </p>
+					</div>
+				</div>
+				<div class="img-esquina-l-b no-animate">
+					<img src="img/dos/estadio-olimpico1.png" alt="">
+					<div class="minidesc no-animate">
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur</p>
+					</div>
+				</div>
+			</div>
+
+		</div>
+		<div class="diapo diapo_2 no-animate step step_orderToAnimate-3">
+			<div class="container fullheight">
+				<div class="row fullheight">
+					<div class="col-sm-12 fullheight">
+						<div class="centered contenido">
+							<div class="col-sm-4">
+								<div class="titulodesc">
+									<h1 class="text-right">El desplegament dels serveis postals</h1>
+									<p class="text-right">L'enviament de telegrames, postals exprés, cartes, tèlex  o faxos augmentaren considerablement al llarg dels Jocs Olímpics, fet que obligà a reforçar els serveis postals habituals.</p>
+								</div>
+							</div>
+
+							<div class="col-sm-4">&nbsp;
+							</div>
+
+							<img class="buzon no-animate step step_orderToAnimate-4" src="img/dos/buzon.png" alt="Buzón Correos">
 							<img class="sobre" src="img/dos/sobre.png" alt="">
-						</div>
-						<div class="col-sm-4">
-							<p class="pt80">També per a l'ocasió, <strong>Correus va habilitar un codi postal propi, el 08092</strong>, per agilitzar la distribució de la correspondència entre el comité organitzador, les delegacions participants i els mitjans de comunicació. Només va funcionar entre l'1 de juliol i el 15 de setembre del 1992. </p>
+
+							<div class="col-sm-4">
+								<p class="pt80">També per a l'ocasió, <strong>Correus va habilitar un codi postal propi, el 08092</strong>, per agilitzar la distribució de la correspondència entre el comité organitzador, les delegacions participants i els mitjans de comunicació. Només va funcionar entre l'1 de juliol i el 15 de setembre del 1992. </p>
+							</div>
 						</div>
 					</div>
-				 </div>
+				</div>
 			</div>
 		</div>
 	</section>	
 
-
 	<!-- SECCION 5 --> 
-	<section class="section five fondo3">
+	<section class="section fourth fondo3">
 	 	<div class="container fullheight">
 		   	<div class="row">
 		   		<div class="col-sm-12">
@@ -204,7 +212,7 @@
 	</section>
 
 	<!-- SECCION 6 --> 
-	<section class="section six fondo3">
+	<section class="section five fondo3">
 
 		<!-- Contenido -->
 	 	<div class="container fullheight">
@@ -234,7 +242,7 @@
 	</section>	
 
 	<!-- SECCION 7 --> 
-	<section class="section seven fondo3">
+	<section class="section six fondo3">
 
 		<!-- Contenido -->
 	 	<div class="container fullheight">
@@ -263,7 +271,7 @@
 	</section>
 	
 	<!-- SECCION 8 --> 
-	<section class="section seven fondo4">
+	<section class="section eight fondo4">
 		<!-- Contenido -->
 	 	<div class="container fullheight">
 		   	<div class="row">
