fix(index_final): delete section 2 diapo 2 - bad animate element

--- a/index_final.html
+++ b/index_final.html
@@ -168,7 +168,7 @@
 							<div class="col-sm-4">&nbsp;
 							</div>
 
-							<img class="buzon no-animate step step_orderToAnimate-4" src="img/dos/buzon.png" alt="Buzón Correos">
+							<img class="buzon" src="img/dos/buzon.png" alt="Buzón Correos">
 							<img class="sobre" src="img/dos/sobre.png" alt="">
 
 							<div class="col-sm-4">
