Maquetación menu movil acabada

--- a/index.html
+++ b/index.html
@@ -17,7 +17,26 @@
 </head>
 <body>
 
-<div id="menuToggle" class="visible-xs">
+<div class="full-menu">
+	<nav id="menu" class="menu">
+		<ul>
+			<li class="introduccio"><a href="#firstsection">Introducció</a></li>
+			<li class="presentacio"><a href="#presentacio">Presentació</a></li>
+			<li class="epreolimpiques"><a href="#epreolimpiques">Emisions Preolímpiques</a></li>
+			<li class="eolimpiques"><a href="#eolimpiques">Emisions Olímpiques</a></li>
+			<li class="arreudelmon"><a href="#arreudelmon">Arreu del món</a></li>
+			<li class="emprempta"><a href="#emprempta">L'emprempta</a></li>
+		</ul>
+	</nav>
+</div>
+
+<div class="hamburguer">
+		<div class="lines line-top"></div>
+		<div class="lines line-mid"></div>
+		<div class="lines line-bottom"></div>
+</div>
+
+<!--<div id="menuToggle" class="visible-xs">
 
 	<input type="checkbox">
 
@@ -34,7 +53,7 @@
 	      <a href="#"><li>Contact</li></a>
 	      <a href="https://erikterwan.com/" target="_blank"><li>Show me more</li></a>
 	</ul>	
-</div>
+</div> -->
 
 <div class="scrolltotop">
 	<a href="#firstsection"><img src="img/scrolltop.png" alt="Subir a Inicio"></a>
@@ -156,7 +175,7 @@
 
 
 	<!-- SECCION 3--> 
-	<section class="section third fondo2">
+	<section id="presentacio" class="section third fondo2">
 	 	<div class="container flex-parent">
 		   	<div class="row">
 				<div class="col-sm-12 flex-child">
@@ -332,7 +351,7 @@
 	</section>
 
 	<!-- SECCION 9 --> 
-	<section class="section nine fondo5">
+	<section id="epreolimpiques" class="section nine fondo5">
 
 		<!-- Contenido seccion -->	
 		<div class="container">
@@ -626,7 +645,7 @@
 	</section>	
 
 		<!-- SECCION 20 --> 
-	<section class="section twenty fondo6">
+	<section id="eolimpiques" class="section twenty fondo6">
 
 		<!-- Contenido -->
 	 	<div class="container flex-parent">
@@ -713,7 +732,7 @@
 
 	
 	<!-- SECCION 23 --> 
-	<section class="section tewntythree fondo7">
+	<section id="arreudelmon" class="section tewntythree fondo7">
 
 		<!-- Contenido -->
 	 	<div class="container">
@@ -750,7 +769,7 @@
 	</section>
 
 	<!-- SECCION 23 --> 
-	<section class="section tewntythree fondo8">
+	<section id="emprempta" class="section tewntythree fondo8">
 
 		<!-- Contenido -->
 	 	<div class="container">
